Refactor to use Stm32f4 Blackpill MCU

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,21 @@
-[env:nanoatmega328]
-platform = atmelavr
-board = nanoatmega328
+[env:blackpill_f411ce]
+platform = ststm32
+board = blackpill_f411ce
 framework = arduino
+upload_protocol = dfu
+; upload_protocol = stlink ; Uncomment if using ST-Link dongle
 monitor_speed = 115200
+
+; Enable USB Serial
+build_flags = 
+    -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+    -D USBCON
+    -D USBD_VID=0x0483
+    -D USBD_PID=0x5740
+    -D USB_MANUFACTURER="Unknown"
+    -D USB_PRODUCT="BLACKPILL_F411CE"
+    -D HAL_PCD_MODULE_ENABLED
+
 lib_deps =
-    paulstoffregen/Encoder @ ^1.4.2
     marcoschwartz/LiquidCrystal_I2C @ ^1.1.4
+    ; Encoder library removed - using Hardware Timer
