--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ build_flags =
     -D USB_MANUFACTURER="Unknown"
     -D USB_PRODUCT="BLACKPILL_F411CE"
     -D HAL_PCD_MODULE_ENABLED
+    -D HAL_PKA_MODULE_DISABLED
 
 lib_deps =
     marcoschwartz/LiquidCrystal_I2C @ ^1.1.4
