feat: Introduce display system, core configuration, and main application logic with updated platformio settings and documentation.

--- a/platformio.ini
+++ b/platformio.ini
@@ -2,8 +2,9 @@
 platform = ststm32
 board = blackpill_f411ce
 framework = arduino
-upload_protocol = dfu
-; upload_protocol = stlink ; Uncomment if using ST-Link dongle
+upload_protocol = stlink
+; upload_protocol = dfu  ; Uncomment to use DFU mode instead
+monitor_port = COM8
 monitor_speed = 115200
 
 ; Enable USB Serial
