--- a/platformio.ini
+++ b/platformio.ini
@@ -9,12 +9,19 @@ monitor_speed = 115200
 
 ; Enable USB Serial
 build_flags = 
+    ; GEMINI.md Rule 10: Strict Compilation (Adapted for Embedded)
+    ; Note: -Wpedantic removed - breaks STM32 HAL framework (empty TUs, enum ranges)
+    -Wall                   ; Enable all standard warnings
+    -Wextra                 ; Enable extra warnings (unused params, sign comparisons)
+    -Werror                 ; Treat ALL warnings as errors
+    
+    ; Framework configuration
     -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
     -D USBCON
     -D USBD_VID=0x0483
     -D USBD_PID=0x5740
-    -D USB_MANUFACTURER="Unknown"
-    -D USB_PRODUCT="BLACKPILL_F411CE"
+    -D USB_MANUFACTURER=\"Unknown\"
+    -D USB_PRODUCT=\"BLACKPILL_F411CE\"
     -D HAL_PCD_MODULE_ENABLED
     -D HAL_PKA_MODULE_DISABLED
 
