--- a/platformio.ini
+++ b/platformio.ini
@@ -1,3 +1,22 @@
+; ============================================================================
+; Native Test Environment (x86/x64) - TESTING_STANDARDS.md §2
+; ============================================================================
+[env:native]
+platform = native
+build_flags =
+    -D NATIVE_BUILD                # Flag to exclude hardware code
+    -D STM32F4xx                   # Use STM32 code path (not AVR)
+    -I test/mocks                  # Include mock headers
+    -I src/headers                 # Project headers  
+    -std=c++17                     # Modern C++
+build_src_filter =
+    +<src/>                        # Include all src files
+    -<src/main.cpp>                # Exclude main application
+test_filter = native/*             # Only run native tests
+
+; ============================================================================
+; STM32F411CE Black Pill - Hardware Test Environment
+; ============================================================================
 [env:blackpill_f411ce]
 platform = ststm32
 board = blackpill_f411ce
@@ -28,3 +47,9 @@ build_flags =
 lib_deps=
     https://github.com/fdebrabander/Arduino-LiquidCrystal-I2C-library.git
     https://github.com/ArminJo/LCDBigNumbers.git
+
+; Hardware test configuration
+test_port = COM8
+test_speed = 115200
+test_filter = hardware/*
+
