Fix Critical Bugs: Persistence, LCD Blank, Resets, Auto-Calib Save
- Switched to FlashStorage_STM32 library for reliable persistence
- Fixed LCD blanking on Wheel Diameter edit
- Fixed random resets in wizards (initialized vars + div/0 check)
- Fixed Auto-Calib save action (Long Press -> Click)
- Updated documentation

--- a/platformio.ini
+++ b/platformio.ini
@@ -47,6 +47,7 @@ build_flags =
 lib_deps=
     https://github.com/fdebrabander/Arduino-LiquidCrystal-I2C-library.git
     https://github.com/ArminJo/LCDBigNumbers.git
+    khoih-prog/FlashStorage_STM32@^1.2.0
 
 ; Hardware test configuration
 test_port = COM8
